Сделана вёрстка шапки

--- a/ShopProductsProject/App.xaml
+++ b/ShopProductsProject/App.xaml
@@ -4,6 +4,14 @@
              xmlns:local="clr-namespace:ShopProductsProject"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+
+            <ResourceDictionary.MergedDictionaries>
+
+                <ResourceDictionary Source="Assets/Dictionaries/Dictionary.xaml"/>
+
+            </ResourceDictionary.MergedDictionaries>
+
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
