--- a/ShopProductsProject/MainWindow.xaml
+++ b/ShopProductsProject/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ShopProductsProject"
         mc:Ignorable="d"
-        Title="Продукция магазина" Height="450" Width="800">
+        Title="Продукция магазина" Icon= "Assets/Images/icon.ico"
+ Height="450" Width="800">
     <Grid>
-        
+        <Frame x:Name="MainFrame"/>
     </Grid>
 </Window>
