--- a/ShopProductsProject/View/Pages/ProductPages.xaml
+++ b/ShopProductsProject/View/Pages/ProductPages.xaml
@@ -21,8 +21,46 @@
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
             <TextBox x:Name="SearchTextBox" Grid.Column="0" Text="Введите для поиска"/>
-            <ComboBox x:Name="SortComboBox" Grid.Column="1" Text="Сортировка"/>
-            <ComboBox x:Name="FiltrationComboBox" Grid.Column="2" Text="Фильтрация"/>
+            <ComboBox x:Name="SortComboBox" Grid.Column="1" Text="Сортировка">
+                <ComboBoxItem>
+                    <TextBlock Text="По возрастанию"/>
+                </ComboBoxItem>
+                <ComboBoxItem>
+                    <TextBlock Text="По убыванию"/>
+                </ComboBoxItem>
+            </ComboBox>
+            <ComboBox x:Name="FiltrationComboBox" Grid.Column="2" Text="Фильтрация">
+               
+            </ComboBox>
         </Grid>
+        <ListView x:Name="DataListView">
+            <ListView.ItemTemplate>
+            <DataTemplate>
+                <Border  CornerRadius="5">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="10*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <Image Source="{Binding ImagePath}"/>
+                        <Grid Grid.Column="1">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="auto"/>
+                                <RowDefinition Height="auto"/>
+                                <RowDefinition Height="auto"/>
+
+                            </Grid.RowDefinitions>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding Title}"/>
+                                <TextBlock Text="{Binding ArticleNumber}"/>
+                                <TextBlock Text="{Binding}"/>
+                            </StackPanel>
+                        </Grid>
+                    </Grid>
+                </Border>
+            </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Page>
