--- a/ShopProductsProject/View/Pages/ProductPages.xaml
+++ b/ShopProductsProject/View/Pages/ProductPages.xaml
@@ -9,7 +9,8 @@
       Title="ProductPages">
 
     <Grid>
-        <Grid.RowDefinitions>
+        
+            <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition/>
             <RowDefinition Height="auto"/>
@@ -33,7 +34,9 @@
                
             </ComboBox>
         </Grid>
-        <ListView x:Name="DataListView">
+        <ScrollViewer Grid.Row="1">
+            <ListView x:Name="DataListView">
+            
             <ListView.ItemTemplate>
             <DataTemplate>
                 <Border  CornerRadius="5">
@@ -43,7 +46,7 @@
                             <ColumnDefinition Width="10*"/>
                             <ColumnDefinition Width="1*"/>
                         </Grid.ColumnDefinitions>
-                        <Image Source="{Binding ImagePath}"/>
+                        <Image Source="{Binding ImagePath}" Width="200"/>
                         <Grid Grid.Column="1">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="auto"/>
@@ -54,7 +57,7 @@
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock Text="{Binding Title}"/>
                                 <TextBlock Text="{Binding ArticleNumber}"/>
-                                <TextBlock Text="{Binding}"/>
+                                <TextBlock Text="{Binding MinCostForAgent}"/>
                             </StackPanel>
                         </Grid>
                     </Grid>
@@ -62,5 +65,7 @@
             </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        </ScrollViewer>
     </Grid>
+        
 </Page>
