Сделано свойство, выводящее список материалов.

--- a/ShopProductsProject/View/Pages/ProductPages.xaml
+++ b/ShopProductsProject/View/Pages/ProductPages.xaml
@@ -57,7 +57,7 @@
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock Text="{Binding Title}"/>
                                 <TextBlock Text="{Binding ArticleNumber}"/>
-                                <TextBlock Text="{Binding MinCostForAgent}"/>
+                                        <TextBlock Text="{Binding MaterialList}"/>
                             </StackPanel>
                         </Grid>
                     </Grid>
