--- a/ShopProductsProject/View/Pages/ProductPages.xaml
+++ b/ShopProductsProject/View/Pages/ProductPages.xaml
@@ -9,8 +9,8 @@
       Title="ProductPages">
 
     <Grid>
-        
-            <Grid.RowDefinitions>
+
+        <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition/>
             <RowDefinition Height="auto"/>
@@ -31,41 +31,56 @@
                 </ComboBoxItem>
             </ComboBox>
             <ComboBox x:Name="FiltrationComboBox" Grid.Column="2" Text="Фильтрация">
-               
+
             </ComboBox>
         </Grid>
         <ScrollViewer Grid.Row="1">
             <ListView x:Name="DataListView">
-            
-            <ListView.ItemTemplate>
-            <DataTemplate>
-                <Border  CornerRadius="5">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="1*"/>
-                            <ColumnDefinition Width="10*"/>
-                            <ColumnDefinition Width="1*"/>
-                        </Grid.ColumnDefinitions>
-                        <Image Source="{Binding ImagePath}" Width="200"/>
-                        <Grid Grid.Column="1">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="auto"/>
-                                <RowDefinition Height="auto"/>
-                                <RowDefinition Height="auto"/>
 
-                            </Grid.RowDefinitions>
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="{Binding Title}"/>
-                                <TextBlock Text="{Binding ArticleNumber}"/>
-                                 <TextBlock Text="{Binding MaterialList}"/>
-                            </StackPanel>
-                        </Grid>
-                    </Grid>
-                </Border>
-            </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Border  CornerRadius="5">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="1*"/>
+                                    <ColumnDefinition Width="10*"/>
+                                    <ColumnDefinition Width="1*"/>
+                                </Grid.ColumnDefinitions>
+                                <Image Source="{Binding ImagePath}" Width="200"/>
+                                <Grid Grid.Column="1">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="auto"/>
+                                        <RowDefinition Height="auto"/>
+                                        <RowDefinition Height="auto"/>
+
+                                    </Grid.RowDefinitions>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="{Binding Title}"/>
+                                        <TextBlock Text="{Binding ArticleNumber}"/>
+                                        <TextBlock Text="{Binding CostProduct}"/>
+                                    </StackPanel>
+                                </Grid>
+                            </Grid>
+                        </Border>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </ScrollViewer>
+        <StackPanel Orientation="Horizontal" Grid.Row="2">
+            <TextBlock x:Name="PrevTextBlock" VerticalAlignment="Center" Text="&lt;" Margin="0 0 2 0" FontSize="16"/>
+            <ListView x:Name="PaginationListView" BorderThickness="0">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock FontSize="16" Foreground="{Binding TextColor}"
+                                   FontWeight="{Binding Fontweight}"
+                                   Text="{Binding Num}"
+                                   TextDecorations="{Binding Selected}"/>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            <TextBlock x:Name="NextTextBlock" VerticalAlignment="Center" Text="&gt;" Margin="0 0 2 0" FontSize="16"/>
+
+        </StackPanel>
     </Grid>
-        
+
 </Page>
