--- a/ShopProductsProject/View/Pages/ProductPages.xaml
+++ b/ShopProductsProject/View/Pages/ProductPages.xaml
@@ -21,15 +21,23 @@
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
-            <TextBox x:Name="SearchTextBox" Grid.Column="0" Text="Введите для поиска"/>
-            <ComboBox x:Name="SortComboBox" Grid.Column="1" Text="Сортировка">
-                <ComboBoxItem>
-                    <TextBlock Text="По возрастанию"/>
-                </ComboBoxItem>
-                <ComboBoxItem>
-                    <TextBlock Text="По убыванию"/>
-                </ComboBoxItem>
-            </ComboBox>
+            <TextBox x:Name="SearchTextBox" Grid.Column="0" TextChanged="SearchTextBoxTextChanged"/>
+            <StackPanel>
+                <ComboBox x:Name="SortComboBox" Grid.Column="1" Text="Сортировка" SelectedIndex="0">
+                    <ComboBoxItem>
+                        <TextBlock Text="По наименованию"/>
+                    </ComboBoxItem>
+                    <ComboBoxItem>
+                        <TextBlock Text="По остатку на складе"/>
+                    </ComboBoxItem>
+                    <ComboBoxItem>
+                        <TextBlock Text="По стоимости"/>
+                    </ComboBoxItem>
+
+                </ComboBox>
+            </StackPanel>
+
+
             <ComboBox x:Name="FiltrationComboBox" Grid.Column="2" Text="Фильтрация">
 
             </ComboBox>
