Сделана первая версия сортировки

--- a/ShopProductsProject/View/Pages/ProductPages.xaml
+++ b/ShopProductsProject/View/Pages/ProductPages.xaml
@@ -22,19 +22,22 @@
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
             <TextBox x:Name="SearchTextBox" Grid.Column="0" TextChanged="SearchTextBoxTextChanged"/>
-            <StackPanel>
-                <ComboBox x:Name="SortComboBox" Grid.Column="1" Text="Сортировка" SelectedIndex="0">
+            <StackPanel Grid.Column="1" Orientation="Horizontal" >
+                <ComboBox x:Name="SortComboBox" SelectedIndex="0"  SelectionChanged="SortComboBoxSelectionChanged" >
+                    <ComboBoxItem>
+                        <TextBlock Text="Без фильтрации"/>
+                    </ComboBoxItem>
+
                     <ComboBoxItem>
                         <TextBlock Text="По наименованию"/>
                     </ComboBoxItem>
-                    <ComboBoxItem>
-                        <TextBlock Text="По остатку на складе"/>
-                    </ComboBoxItem>
+
                     <ComboBoxItem>
                         <TextBlock Text="По стоимости"/>
                     </ComboBoxItem>
 
                 </ComboBox>
+                <Button Content="↓" Name="OrderButton" Click="OrderButtonClick"/>
             </StackPanel>
 
 
