--- a/ShopProductsProject/View/Pages/ProductPages.xaml
+++ b/ShopProductsProject/View/Pages/ProductPages.xaml
@@ -23,9 +23,9 @@
             </Grid.ColumnDefinitions>
             <TextBox x:Name="SearchTextBox" Grid.Column="0" TextChanged="SearchTextBoxTextChanged"/>
             <StackPanel Grid.Column="1" Orientation="Horizontal" >
-                <ComboBox x:Name="SortComboBox" SelectedIndex="0"  SelectionChanged="SortComboBoxSelectionChanged" >
+                <ComboBox x:Name="SortComboBox"   SelectionChanged="SortComboBoxSelectionChanged" >
                     <ComboBoxItem>
-                        <TextBlock Text="Без фильтрации"/>
+                        <TextBlock Text="Без сортировки"/>
                     </ComboBoxItem>
 
                     <ComboBoxItem>
@@ -41,7 +41,7 @@
             </StackPanel>
 
 
-            <ComboBox x:Name="FiltrationComboBox" Grid.Column="2" Text="Фильтрация">
+            <ComboBox x:Name="FiltrationComboBox" Grid.Column="2"  SelectionChanged="FiltrationComboBoxSelectionChanged">
 
             </ComboBox>
         </Grid>
@@ -57,7 +57,7 @@
                                     <ColumnDefinition Width="10*"/>
                                     <ColumnDefinition Width="1*"/>
                                 </Grid.ColumnDefinitions>
-                                <Image Source="{Binding ImagePath}" Width="200"/>
+                                <Image Source="{Binding Product.ImagePath}" Width="200"/>
                                 <Grid Grid.Column="1">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="auto"/>
@@ -66,9 +66,10 @@
 
                                     </Grid.RowDefinitions>
                                     <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="{Binding Title}"/>
-                                        <TextBlock Text="{Binding ArticleNumber}"/>
-                                        <TextBlock Text="{Binding CostProduct}"/>
+                                        <TextBlock Text="{Binding Product.Title}"/>
+                                        <TextBlock Text="{Binding Product.ArticleNumber}"/>
+                                        <TextBlock Text="{Binding Product.CostProduct}"/>
+                                        <TextBlock Text="{Binding Product.MaterialList}"/>
                                     </StackPanel>
                                 </Grid>
                             </Grid>
