Сделана вёрстка добавления или редактирования страницы

--- a/ShopProductsProject/MainWindow.xaml
+++ b/ShopProductsProject/MainWindow.xaml
@@ -8,7 +8,12 @@
         Title="Продукция" Icon= "Assets/Images/icon.ico"
  Height="450" Width="800">
     <Grid>
-
-        <Frame x:Name="MainFrame"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <TextBlock Text="{Binding ElementName=MainFrame.Content, Path=Content.Title}"></TextBlock>
+        <Button x:Name="BackButton" Content="Назад" Click="BackButtonClick" HorizontalAlignment="Right"/>
+        <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" Grid.Row="1"/>
     </Grid>
 </Window>
