--- a/ShopProductsProject/View/Pages/UpdatePage.xaml
+++ b/ShopProductsProject/View/Pages/UpdatePage.xaml
@@ -6,9 +6,26 @@
       xmlns:local="clr-namespace:ShopProductsProject.View.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Редактирование\Добавление товара">
+      Title="Редактирование\Добавление товара" Foreground="{StaticResource ActentColor}">
 
-    <Grid>
-        
-    </Grid>
+    <StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <TextBlock Text="Название товара" />
+            <TextBlock x:Name="TitleTextBlock" Text="{Binding Title}"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <TextBlock Text="Тип товара" />
+            <ComboBox DisplayMemberPath="Title" SelectedValuePath="ID" x:Name="TypeComboBox"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <TextBlock Text="Артикул товара" />
+            <TextBox x:Name="ArticleTextBox"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <TextBlock Text="Фото товара" />
+            <Image Source="{Binding ImagePath}" x:Name="ProductImage"/>
+            <Button x:Name="ChangeImageButton" Click="ChangeImageButtonClick" Content="Добавить изображение"/>
+        </StackPanel>
+       
+    </StackPanel>
 </Page>
