реализована верстка добавления \редактирования товара

--- a/ShopProductsProject/View/Pages/ProductPages.xaml
+++ b/ShopProductsProject/View/Pages/ProductPages.xaml
@@ -99,6 +99,7 @@
             </ListView>
             <TextBlock x:Name="NextTextBlock" MouseLeftButtonDown="NextTextBlockMouseLeftButtonDown" VerticalAlignment="Center" Text="&gt;" Margin="0 0 2 0" FontSize="16"/>
 <Button HorizontalAlignment="Left" x:Name="AddProductButton" Content="Добавить товар" Grid.Row="2" Click="AddProductButtonClick"/>
+            <Button x:Name="DeleteProductButton" Content="Удалить товар" Grid.Row="2" Click="DeleteProductButtonClick"/>
         </StackPanel>
         
     </Grid>
